migration to Django 3.2.13

--- a/ojoalplato/templates/admin/base_site.html
+++ b/ojoalplato/templates/admin/base_site.html
@@ -1,5 +1,5 @@
 {% extends "admin/base.html" %}
-{% load static from staticfiles %} # This might be just {% load static %} in your ENV
+{% load static %}
 
 {% block extrastyle %}
   {{ block.super }}
