--- a/ojoalplato/templates/blog/wpfamily/categories_list.html
+++ b/ojoalplato/templates/blog/wpfamily/categories_list.html
@@ -1,5 +1,5 @@
 {% extends "blog/wpfamily/base.html" %}
-{% load staticfiles content_filters %}
+{% load static content_filters %}
 
 {% block header %}
     <header class="page-header warm archive">
