Added about me section

--- a/ojoalplato/static/wpfamily/style4b68.css
+++ b/ojoalplato/static/wpfamily/style4b68.css
@@ -944,7 +944,7 @@ body.sidebarnav .site-navigation .sub-menu li:last-child {
   }
 
   .has-family .content-area {
-    padding-top: 60px;
+    /*padding-top: 60px;*/
   }
 }
 
@@ -954,7 +954,7 @@ body.sidebarnav .site-navigation .sub-menu li:last-child {
   }
 
   .has-family .content-area {
-    padding-top: 60px;
+    /*padding-top: 60px;*/
   }
 }
 
