--- a/ojoalplato/templates/envelope/email_body.html
+++ b/ojoalplato/templates/envelope/email_body.html
@@ -51,8 +51,8 @@
                                     <td style="font-family:Helvetica, Arial, sans-serif; font-weight:400; text-align:center"
                                         align="center">
                                         <br>
-                                        <img src="http://{{ request.get_host }}{% static 'wpfamily/img/logo_white.png' %}" width="224"
-                                             height="240" alt="robot picture">
+                                        <img src="https://ojoalplato-static.s3.amazonaws.com/static/wpfamily/img/logo3_white.png" width="224"
+                                             alt="robot picture">
                                     </td>
                                 </tr>
                                 <tr>
