--- a/ojoalplato/templates/newsletter/message/message.html
+++ b/ojoalplato/templates/newsletter/message/message.html
@@ -2787,7 +2787,7 @@ form label {
                 <div class="site-branding">
                     <div class="site-title">
                         <a href="http://{{ site.domain }}" rel="home">
-                            <img src="{% static 'wpfamily/img/logo_white.png' %}" height="200px">
+                            <img src="https://ojoalplato-static.s3.amazonaws.com/static/wpfamily/img/logo3_white.png" height="200px">
                         </a>
                     </div>
                 </div><!-- .site-branding -->
