--- a/ojoalplato/templates/blog/wpfamily/base.html
+++ b/ojoalplato/templates/blog/wpfamily/base.html
@@ -173,6 +173,15 @@
 {% block footer %}
     <footer id="colophon" class="site-footer" role="contentinfo">
         <div class="site-info">
+            <div class="pull-left">
+            <a href="{% url 'feed' %}">
+                <img src="{% static 'images/feed.png' %}" alt="Feed"
+                     class="rounded float-start img-fluid" style="max-width:15px;max-height:15px">
+                <span>RSS</span></a>
+            |
+            <a href="{% url 'atom' %}">
+                <span>Atom</span></a>
+            </div>
             &copy; Copyright {% now "Y" %}. Ojoalplato.com<span class="login-link pull-right">
             {% if not user.is_authenticated %}
                 <a href="{% url 'admin:index' %}">Login</a>
