Added a simple serializer for restaurants. Added a warning message on newslewtter subscriptions.

--- a/ojoalplato/templates/newsletter/subscription_subscribe_activated.html
+++ b/ojoalplato/templates/newsletter/subscription_subscribe_activated.html
@@ -6,5 +6,6 @@
     <h1>Suscripción activada</h1>
 
     <p>Tu suscripción se ha activado con éxito.</p>
+    <p>Añade la dirección no-reply@ojoalplato.com a tu agenda de correo para que no te envíe las notificaciones a Spam.</p>
     </div>
 {% endblock form %}
