--- a/ojoalplato/templates/facebook_js.html
+++ b/ojoalplato/templates/facebook_js.html
@@ -1,8 +1,4 @@
 <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.7&appId=110350462372983";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+<script async defer crossorigin="anonymous"
+        src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v14.0&appId=110350462372983&autoLogAppEvents=1"
+        nonce="bAYQSeXH"></script>
