--- a/ojoalplato/templates/fb_like.html
+++ b/ojoalplato/templates/fb_like.html
@@ -1,2 +1,2 @@
-<div class="fb-like" data-href="http://nuevo.ojoalplato.com/archivos/{{ post.id }}" data-layout="box_count"
-     data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
+<div class="fb-like" data-href="http://www.ojoalplato.com/{{ post.slug }}" data-width="" data-layout="box_count"
+     data-action="like" data-size="large" data-share="false"></div>
