Improved wine tasting sheet.

--- a/ojoalplato/templates/cards/templatetags/tasting_form.html
+++ b/ojoalplato/templates/cards/templatetags/tasting_form.html
@@ -82,7 +82,7 @@
                 <tbody>
                 {% if wine.cata_olf_intensidad %}
                     <tr>
-                        <th scope="row" class="col-xs-4">Intensidad aromática</th>
+                        <th scope="row" class="col-xs-4">Percepción aromática</th>
                         <td>{{ wine.get_cata_olf_intensidad_display }}</td>
                     </tr>
                 {% endif %}
