--- a/ojoalplato/templates/cards/card_detail.html
+++ b/ojoalplato/templates/cards/card_detail.html
@@ -4,7 +4,7 @@
 {% block title %}Ojoalplato: {{ card.name }}{% endblock %}
 
 {% block content %}
-    <article id="post-4"
+    <article id="{{ card.slug }}"
              class="post-4 family_blog_members type-family_blog_members status-publish has-post-thumbnail hentry">
 
         <div class="featured-image-family"
