--- a/ojoalplato/templates/cards/templatetags/wine.html
+++ b/ojoalplato/templates/cards/templatetags/wine.html
@@ -43,7 +43,8 @@
     <div class="row">
         <div class="col-md-3 col-md-offset-9 col-xs-3 col-xs-offset-3">
         <a href="{{ wine.get_absolute_url }}" type="button"
-           class="btn btn-default btn-edit">
+           class="btn btn-default btn-edit background-orange"
+           style="color:white">
             Ver ficha completa
         </a>
         </div>
