--- a/ojoalplato/templates/blog/wpfamily/base.html
+++ b/ojoalplato/templates/blog/wpfamily/base.html
@@ -46,7 +46,15 @@
     {% endblock css %}
     {% block css_custom %}{% endblock css_custom %}
 
-    {% google_analytics %}
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T2SQJJE288"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T2SQJJE288');
+</script>
 </head>
 
 
